<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.input.InputActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:progressTint="@color/lightblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="370dp"
            android:background="@drawable/logout"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/blue"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/blue"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Hikmal"/>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="267dp"
        android:layout_height="267dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama"
        app:srcCompat="@drawable/insert_photo" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_masukan_gambar"
        android:textSize="20sp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:text="@string/camera"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_semibold"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/gallery"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_semibold"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_skin_detection"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="50dp"
        android:text="@string/detection"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_semibold"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_skin_detection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="hasil"/>


</androidx.constraintlayout.widget.ConstraintLayout>