<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.output.OutputActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:progressTint="@color/lightblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/back"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil_klasifikasi"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/urbanist_bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="267dp"
        android:layout_height="267dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/insert_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/condition"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/urbanist_bold" />

        <TextView
            android:id="@+id/output_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/lightblue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/urbanist_semibold"
            tools:text="Melanoma"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/probabilitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/probabilitas"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/urbanist_bold" />

        <TextView
            android:id="@+id/output_probabilitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/lightblue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/urbanist_semibold"
            tools:text="Hasil Probabilitas"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>